styles/home.css
/* Dynamic Slider */
.carousel_slider {
  width: 100%;
  height: max-content;
  max-height: 500px;
  display: flex;
  overflow: hidden;
  position: relative;
}
.carousel_slides {
  opacity: 0.5;
  flex-shrink: 0;
  width: 100%;
  height: 500px;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  transition: all 1s ease-in-out;
}
.carousel_slides.active {
  opacity: 1;
}
.slider_container {
  overflow: hidden;
}
.slider_container:first-child {
  display: flex;
  align-items: center;
}
.slider_img-container {
  width: 100%;
  height: 150%;
  background-color: rgb(255, 255, 255);
  border-radius: 0 50% 50% 0;
  overflow: hidden;
  border-right: 10px solid #ffffff;
}
.slider_img-container img {
  object-fit: cover;
  width: 100%;
  object-position: center;
  object-fit: cover;
}
.slider_contents {
  padding-inline: 40px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
  color: #ffffff;
}
.slider_title {
  color: rgb(255, 255, 255);
  font-size: 60px;
  font-weight: 600;
}
.slider_contents .hr_line {
  width: 60%;
  margin: 0px;
  height: 1px;
  margin-block: 0 10px;
}
.slider_contents p {
  color: #fff;
  font-family: Poppins;
  font-size: 16px;
  font-weight: 400;
}
.slider_title-label {
  margin-bottom: 24px;
}
.slider_description {
  margin-bottom: 16px;
}

/* logo slider */
.home_partner-slider {
  height: max-content;
  padding: 2rem 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.home_partner-title {
  text-align: center;
}
.home_partner-slider .hr_line {
  width: 25%;
  margin-block: 8px;
}

.logo_slider {
  position: relative;
  width: 90%;
  margin-inline: auto;
  white-space: nowrap;
  overflow: hidden;
}
.logo_slider::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  width: 180px;
  height: 100%;
  background: linear-gradient(to left, rgba(255, 255, 255, 0), white);
}
.logo_slider::after {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  z-index: 2;
  width: 180px;
  height: 100%;
  background: linear-gradient(to right, rgba(255, 255, 255, 0), white);
}
.logo_slider:hover .logo_slides {
  animation-play-state: paused;
}

.logo_slides {
  display: inline-block;
  animation: 10s logo-slider infinite linear;
  padding-block: 16px;
}
.slide_icons {
  width: auto;
  height: 170px;
  margin-right: 60px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@keyframes logo-slider {
  from {
    transform: translateX(0%);
  }
  to {
    transform: translateX(-100%);
  }
}

/* Dynamic Profile Card */
.dynamic_profile-container {
  width: 90% !important;
  height: 330px;
  margin-inline: auto;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  width: 100%;
  max-height: max-content;
  gap: 20px;
  padding: 2rem 1rem;
  flex-wrap: wrap;
}
.dynamic_cards {
  width: min(100%, 194px);
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.card_img {
  position: relative;
  width: 100%;
  display: flex;
  height: 222px;
  flex-direction: column;
  align-items: center;
  flex-shrink: 0;
  border-radius: 20px;
  overflow: hidden;
  margin-bottom: 8px;
  transition: 0.5s all ease;
}
.card_img img {
  width: 100%;
  object-fit: cover;
  object-position: center;
  transition: 0.5s all ease;
}
.show_full-icon {
  width: 18px;
  height: 18px;
  font-size: 12px;
  display: grid;
  place-items: center;
  border: 1px solid #fff;
  border-radius: 50%;
  z-index: 1;
  color: #fff;
  position: absolute;
  top: 0.8rem;
  right: 0.8rem;
  cursor: pointer;
}
.card_identity {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 6px;
}
.profile_name {
  cursor: pointer;
  color: #000;
  text-align: left;
  font-size: 14px;
  font-weight: 600;
}
.profile_designation {
  display: inline-flex;
  padding: 3px 6px;
  justify-content: center;
  align-items: center;
  color: #000;
  text-align: center;
  font-size: 8px;
  font-weight: 500;
  border-radius: 8.195px;
  border: 1px solid #000;
}
.profile_description {
  display: none;
  margin-top: 8px;
  color: #000;
  font-family: Poppins;
  font-size: 12px;
  font-weight: 400;
  text-align: left;
  transition: 0.5s all ease-in;
}

/* Countdown Timer */
.countdown_container {
  background-color: #02b0e3;
  min-height: max-content;
  height: 465px;
}
.countdown_wrapper {
  width: 100%;
  height: inherit;
  background-image: url("../assets/img/bg-countdown.png");
  background-size: cover;
  display: grid;
  place-items: center;
  /* padding: 0; */
  /* margin-top: -16px; */
}
.countdown_clock {
  width: min(90%, 682px);
  height: 235px;
  border-radius: 14px;
  background: #02b0e3;
  box-shadow: -30.53px 30.53px 14.08px 158.401px rgba(0, 138, 130, 0.1) inset,
    30.53px -30.53px 14.08px 148.545px rgba(0, 138, 130, 0.1) inset,
    0px 0px 15px 0px #fff;
  backdrop-filter: blur(10px);
  display: flex;
  justify-content: center;
  gap: 42px;
}
.countdown_cards-group {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  place-items: center;
  column-gap: 14px;
  position: relative;
}
.color_red {
  color: #8f0d0b !important;
}
.countdown_cards {
  width: 70px;
  height: 112px;
  color: #ffffff;
  font-size: 67px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  font-family: "Digital Numbers";
  flex: 1;
  border-radius: 3px;
  text-align: center;
  border: 0.3px solid #ffffff8d;
  background: linear-gradient(
    180deg,
    #ffffff85 0%,
    rgba(255, 255, 255, 0) 100%
  );
  backdrop-filter: blur(22px);
  margin-top: -40px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.countdown_clock-label {
  text-transform: uppercase;
  color: #fff;
  font-family: Poppins;
  font-size: 24px;
  font-weight: 300;
  position: absolute;
  bottom: 24px;
}

/* Home Contents */
.home_text-container {
  width: 90%;
  margin-inline: auto;
  padding-block: 2rem;
  display: flex;
  flex-direction: column;
  gap: 24px;
}
.home_text-container p {
  text-align: left;
}

